--- a/app/src/main/res/layout/activity_pay_rent.xml
+++ b/app/src/main/res/layout/activity_pay_rent.xml
@@ -6,10 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".PayRentActivity">
 
+    <RelativeLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:background="@color/DarkBlue100"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/backBtn"
+            android:layout_width="22dp"
+            android:layout_height="16dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:scaleX="-1"
+            android:src="@drawable/angle_right"
+            app:tint="@color/DarkBlue500" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="14dp"
+            android:layout_toRightOf="@+id/backBtn"
+            android:text="Pay Rents"
+            android:textColor="@color/DarkBlue500"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/pay_rent_recyclerView"
+        android:layout_below="@+id/linearLayout4"
         android:layout_margin="10dp"
         />
 
